--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,17 @@
 			<scope>provided</scope>
 		</dependency>
 
-	</dependencies>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
+
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+		</dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
